tests/ui/endpoint/non_custom_uri_attribute.stderr
error: `uri` can only be used on custom endpoints
 --> $DIR/non_custom_uri_attribute.rs:8:12
  |
8 | #[read_all(uri = "custom_read")]
  |            ^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> $DIR/non_custom_uri_attribute.rs:5:12
  |
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
